welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:-4: error: Unmatched closing brace '}' ignored here
	}
        ^DwarfCode:-3: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^DwarfCode:1: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^