welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(1){
	while(!estSurBiscuit()){
}
	avance()
}
if(estSurBiscuit()){
	prendBiscuit()
	while(!estSurBiscuit()){
		recule()
	}
	avance()
	poseBiscuit()
}
}